[gd_scene load_steps=10 format=3 uid="uid://bs50o0b1v3s5r"]

[ext_resource type="Script" path="res://Scenes/BottomPlayerGUI.gd" id="1_4uj3l"]
[ext_resource type="Texture2D" uid="uid://x8vrjqjjm5i7" path="res://Player/GrimCheaper/gc_portrait.png" id="2_7a28v"]
[ext_resource type="Texture2D" uid="uid://bns4f8f0l5n7a" path="res://Player/UI/portrait_cover.png" id="3_0out8"]
[ext_resource type="Texture2D" uid="uid://cb8ov6ywh3qb0" path="res://Player/GrimCheaper/Chicken Attack.png" id="4_jdhbl"]
[ext_resource type="Texture2D" uid="uid://culij2c0eqngi" path="res://Player/GrimCheaper/chicken skill.png" id="5_ultp0"]
[ext_resource type="Texture2D" uid="uid://cd637n8bdvrwd" path="res://Player/UI/circular_fill.png" id="6_bia2o"]
[ext_resource type="Texture2D" uid="uid://07birr4t000w" path="res://Player/UI/circular_over.png" id="7_tnm2v"]
[ext_resource type="Texture2D" uid="uid://b5xjvtapba4jt" path="res://Player/UI/Resting.png" id="8_lxus6"]

[sub_resource type="LabelSettings" id="LabelSettings_pr8j4"]
font_size = 12

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4uj3l")
player_path = NodePath("../../../../../Players/GrimCheaper")
player_icon = ExtResource("2_7a28v")
player_border = ExtResource("3_0out8")
attack_icon = ExtResource("4_jdhbl")
skill_icon = ExtResource("5_ultp0")
used_modulation = Color(0.294118, 0.294118, 0.294118, 1)

[node name="PlayerPortrait" type="Control" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="PlayerIcon" type="TextureRect" parent="PlayerPortrait"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7a28v")

[node name="PlayerBorder" type="TextureRect" parent="PlayerPortrait"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0out8")

[node name="Details" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(120, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="PlayerName" type="Label" parent="Details"]
offset_right = 120.0
offset_bottom = 20.0
text = "Grim Cheeper"
label_settings = SubResource("LabelSettings_pr8j4")
horizontal_alignment = 1

[node name="Abilities" type="HBoxContainer" parent="Details"]
offset_top = 24.0
offset_right = 120.0
offset_bottom = 75.0
size_flags_vertical = 3
alignment = 1

[node name="Attack" type="Control" parent="Details/Abilities"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 3
anchors_preset = 0
offset_right = 48.0
offset_bottom = 51.0
size_flags_horizontal = 3

[node name="AttackIcon" type="TextureRect" parent="Details/Abilities/Attack"]
modulate = Color(0.301961, 0.301961, 0.301961, 1)
custom_minimum_size = Vector2(48, 48)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("4_jdhbl")
ignore_texture_size = true

[node name="AttackCDBar" type="TextureProgressBar" parent="Details/Abilities/Attack"]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
step = 0.0
value = 20.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("6_bia2o")
texture_over = ExtResource("7_tnm2v")
texture_progress = ExtResource("6_bia2o")
tint_progress = Color(0.129412, 0.403922, 0.235294, 1)

[node name="Control" type="Control" parent="Details/Abilities"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 52.0
offset_right = 68.0
offset_bottom = 51.0
size_flags_horizontal = 3

[node name="Skill" type="Control" parent="Details/Abilities"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 3
anchors_preset = 0
offset_left = 72.0
offset_right = 120.0
offset_bottom = 51.0
size_flags_horizontal = 3

[node name="SkillIcon" type="TextureRect" parent="Details/Abilities/Skill"]
custom_minimum_size = Vector2(48, 48)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("5_ultp0")
ignore_texture_size = true

[node name="SkillCDBar" type="TextureProgressBar" parent="Details/Abilities/Skill"]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
step = 0.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("6_bia2o")
texture_over = ExtResource("7_tnm2v")
texture_progress = ExtResource("6_bia2o")
tint_progress = Color(0.129412, 0.403922, 0.235294, 1)

[node name="HealthBar" type="ProgressBar" parent="Details"]
offset_top = 79.0
offset_right = 120.0
offset_bottom = 106.0

[node name="DeathRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.313726, 0.160784, 0.160784, 0.572549)

[node name="TextureRect" type="TextureRect" parent="DeathRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -33.5
offset_right = 33.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_lxus6")
